@startuml reversi diagram
class Board {
-board_size
-board
-next_player
+return_board()
+make_move(x,y)
+list_affected(x,y,player)
+moves_exist()
+evaluation(player)
}
class BoardView {
+draw_board()
+invalid_move_comment()
+end_screen()
}

class Player {
-player_type
+prompt_move()
}
class AiPlayerEasy {
+prompt_move()
}

class AiPlayerComplicated {
+prompt_move()
-minimax()
}

class GameLogic {
+initialise(size)
+initialise_ai(size)
+begin_game()
}
GameLogic  *--  Board
GameLogic  --  Board
GameLogic  --  BoardView
BoardView  --  Board
Player <|-- AiPlayerEasy
Player <|-- AiPlayerComplicated
AiPlayerComplicated  --  Board
GameLogic  *-- Player
GameLogic  *-- AiPlayerEasy
@enduml